--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "python.pythonPath": "/Users/hengyue/anaconda/envs/mockingbird/bin/python"
+    "python.pythonPath": "/Users/hengyue/opt/anaconda3/envs/pandasboost/bin/python",
+    "python.testing.pytestArgs": [
+        "tests"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.nosetestsEnabled": false,
+    "python.testing.pytestEnabled": true
 }
